# FuturesReport

./: .env.example  CLEANUP_REPORT.md  Dockerfile  FUNCTIONALITY_INVENTORY.md  README-ZH-TW.md  README-ZH.md  README.md  docker-compose.yml  package-lock.json  package.json  version-history.json  zbpack.json
backend/: alembic.ini  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_subscription_tables.py  003_simulation_records.py  004_site_settings.py  005_refund_records.py  006_simulation_records_soft_delete.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  admin.py  auth.py  graph.py  report.py  settings.py  simulation.py  subscription.py
backend/app/db/: database.py  models.py
backend/app/models/: task.py  user.py
backend/app/services/: futures_framework.py  graph_builder.py  oasis_profile_generator.py  ontology_generator.py  payment_settings_service.py  refund_service.py  report_agent.py  simulation_config_generator.py  simulation_manager.py  simulation_runner.py  subscription_service.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/utils/: auth.py  llm_client.py  logger.py  retry.py  zep_paging.py
backend/scripts/: action_logger.py  backfill_full_requirement.py  migrate_from_json.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py
backend/tests/: test_payment_admin_api.py  test_payment_gateway.py  test_payment_settings.py  test_refund_service.py  test_simulation_history_delete.py  test_smoke.py
(+69 files in other folders)
